# jimp

./: .travis.yml  README.md
lab1/factorial/: Factorial.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/: CMakeLists.txt
lab12/timerecorder/: TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.h
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h
lab2/array2d/: Array2D.cpp  Array2D.h  Array2d.cpp  Array2d.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/ccounter/: CCounter.h
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/memorychunk/: MemoryChunk.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab5/xxx/: Xxx.cpp  Xxx.h  main.cpp
lab6/academia/: StudentRepository.cpp  StudentRepository.h  main.cpp
lab6/point/: Point.cpp  Point.h  main.cpp
lab6/wordcounter/: main.cpp  (+2 more)
lab8/: CMakeLists.txt
(+39 files in other folders)
